<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightgrey"
    android:padding="@dimen/general_padding"
    tools:context=".presentation.ex06.Ut01Ex06Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/image_height"
            android:src="@drawable/tapasoulkitchen"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/titulo_tapa_desc"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/prize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/price_margin"
            android:background="@color/lightgrey80"
            android:padding="@dimen/price_padding"
            android:text="@string/premio"
            app:layout_constraintStart_toStartOf="@+id/image"
            app:layout_constraintTop_toTopOf="@+id/image" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_constraintStart_toEndOf="@id/image"
            app:layout_constraintTop_toBottomOf="@id/image"
            android:padding="@dimen/general_padding"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin_top"
                android:text="@string/titulo_tapa"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textSize="@dimen/titulo_tapa_text_size"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/bar"
                android:textSize="@dimen/place_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/general_margin_top"
                android:text="@string/nombre_local"
                app:layout_constraintStart_toStartOf="@id/title"
                app:layout_constraintTop_toBottomOf="@+id/title" />

            <TextView
                android:id="@+id/total"
                android:textSize="@dimen/data_text_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/general_margin_top"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="@id/bar"
                app:layout_constraintTop_toBottomOf="@+id/bar" />

            <TextView
                android:id="@+id/media"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/data_text_size"
                android:layout_margin="@dimen/general_margin_top"
                android:text="@string/media"
                app:layout_constraintStart_toEndOf="@id/total"
                app:layout_constraintTop_toBottomOf="@+id/bar" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_width"
                android:layout_margin="@dimen/general_margin_top"
                app:layout_constraintStart_toEndOf="@id/media"
                app:layout_constraintTop_toBottomOf="@+id/bar"
                android:src="@drawable/empty3"
                app:tint="@color/golden" />


            <ImageView
                android:id="@+id/share"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_width"
                android:layout_margin="@dimen/general_margin_top"
                android:layout_marginStart="@dimen/media_margin_left"
                app:layout_constraintEnd_toStartOf="@id/fav"
                app:layout_constraintTop_toBottomOf="@+id/bar"
                android:src="@drawable/share"
                app:tint="@color/red"/>

            <ImageView
                android:id="@+id/fav"
                android:layout_width="@dimen/star_width"
                android:layout_height="@dimen/star_width"
                android:layout_margin="@dimen/general_margin_top"
                app:layout_constraintTop_toBottomOf="@+id/bar"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/fav"
                app:tint="@color/red"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>