<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="500dp"
    android:padding="20dp"
    android:background="@color/white"
    tools:context=".presentation.ex01.Ut01ex01activity"
    android:layout_centerHorizontal="true"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        android:src="@drawable/fries"
        android:scaleType="centerCrop"
       />

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:text="@string/title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:maxLines="2"
            android:textColor="@color/grey"
            android:textStyle="italic"
            android:text="@string/description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="20dp"
            android:maxLines="2"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/price"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="30dp">

        <ImageView
            app:tint="@color/golden"
            android:layout_width="30dp"

            android:layout_height="wrap_content"
            android:src="@drawable/empty3"
            />

        <ImageView
            app:tint="@color/golden"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/empty3"
            />

        <ImageView
            app:tint="@color/golden"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/empty3"
            />
        <ImageView
            app:tint="@color/golden"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/empty3"
            />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:src="@drawable/emptystar"
            app:tint="@color/golden" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:gravity="right"
            >

        <ImageView
            app:tint="@color/black"
            android:layout_width="28dp"
            android:layout_marginTop="2dp"
            android:layout_height="wrap_content"
            android:src="@drawable/share"
            android:layout_marginRight="10dp"
            />

        <ImageView
            android:scaleType="centerCrop"
            app:tint="@color/red"
            android:layout_width="28dp"
            android:layout_height="wrap_content"
            android:src="@drawable/fav"
            />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>